--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,6 @@ img {
   display: grid;
   grid-template-columns: 400px 400px 400px;
   margin-top: 51px;
-  /* округлить до 50px */
 }
 
 .advantages-item {
@@ -455,10 +454,6 @@ img {
   overflow: hidden;
 }
 
-/* .section-map img {
-  display: block;
-} */
-
 .sedona-google-map {
   border: none;
 }
@@ -476,13 +471,18 @@ img {
   padding: 55px;
   background-color: var(--basic-white);
   box-shadow: 0px 7px 15px var(--form-shadow);
-  transform: translateY(-100%);
+  transform: translateY(0);
   transition: transform 0.4s ease-in;
 }
 
-.search-form-open {
+/* .search-form-open {
   transform: translateY(0);
   transition: transform 0.4s ease-in;
+} */
+
+.search-form-closed {
+  transition: transform 0.4s ease-in;
+  transform: translateY(-100%);
 }
 
 .hotel-search-paragraph {
@@ -717,8 +717,6 @@ img {
   color: inherit;
   background-color: transparent;
   border: none;
-  /* -webkit-appearance: textfield;
-  appearance: textfield; */
 } 
 
 .filters-price-input::placeholder {
@@ -738,7 +736,6 @@ img {
   position: absolute;
   top: 20px;
   left: 0;
-  /* width: 100%; */
   height: 2px;
   background-color: var(--text-active-light);
   cursor: pointer;
@@ -746,7 +743,6 @@ img {
 
 .filters-price-bar {
   height: 2px;
-  /* width: 80%; */
   margin-left: 0;
   background-color: var(--basic-white);
 }
@@ -764,14 +760,6 @@ img {
   transition: transform ease-in 0.2s;
   cursor: pointer;
 }
-
-/* .toggle-min {
-  left: 0;
-}
-
-.toggle-max {
-  left: 80%;
-} */
 
 .filters-price-toggle:hover,
 .filters-price-toggle:focus {
