--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 1 version
+*/
+
 @font-face {
   font-family: "PT Sans";
   src: local("PT Sans Bold"),
@@ -37,7 +44,7 @@
   --text-active-light: rgba(250, 250, 250, 0.3); /* текст кнопок, ссылок при нажатии*/
   --toggle-shadow-outer: rgba(0, 0, 0, 0.25);
   --toggle-shadow-inner: rgba(171, 171, 171, 0.3);
-  --input-hover: #ebebeb; /* фон и границы input при наведении), трудно отличим от #E5E5E5 - граница  */
+  --input-hover: #ebebeb; /* фон и границы input при наведении) */
   --input-focus: #e5e5e5; /* применяется только для границ, фон белый */
   --dir-arrow: #cacaca; /* значок сортировки вниз-вверх в покое*/
   --button-sign: #a9a9a9; /* цвет + и - в кнопках формы*/
@@ -68,11 +75,14 @@
 }
 
 .page-body {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: -webkit-min-content 1fr -webkit-min-content;
+  -ms-grid-rows: min-content 1fr min-content;
+  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
   grid-template-rows: min-content 1fr min-content;
   min-width: 1200px;
   height: 100%;
-
   margin: 0;
   padding: 0;
   font-family: "PT Sans", Arial, sans-serif;
@@ -101,6 +111,9 @@ img {
   width: 1px;
   height: 1px;
   margin: -1px;
+  border: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 .container {
@@ -125,13 +138,16 @@ img {
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 /* Navigation Grids */
 
 .navigation-list {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: (1fr)[4];
   grid-template-columns: repeat(4, 1fr);
   min-height: 56px;
   align-items: center;
@@ -144,21 +160,25 @@ img {
 }
 
 .navigation-item:nth-child(4n+1) {
-  justify-self: left;
+  -ms-grid-column-align: left;
+      justify-self: left;
   padding-left: 72px;
   max-width: 230px;
 }
 
 .navigation-item:nth-child(4n+2) {
-  justify-self: left;
+  -ms-grid-column-align: left;
+      justify-self: left;
 }
 
 .navigation-item:nth-child(4n+3) {
-  justify-self: right;
+  -ms-grid-column-align: right;
+      justify-self: right;
 }
 
 .navigation-item:nth-child(4n) {
-  justify-self: right;
+  -ms-grid-column-align: right;
+      justify-self: right;
   padding-right: 72px;
   max-width: 230px;
 }
@@ -264,7 +284,9 @@ img {
 }
 
 .advantages-list {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 400px 400px 400px;
   grid-template-columns: 400px 400px 400px;
   margin-top: 51px;
 }
@@ -300,7 +322,9 @@ img {
 
 .advantages-item-accent {
   grid-column: 1 / -1;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 400px 400px 400px;
   grid-template-columns: 400px 400px 400px;
   color: var(--basic-white);
   background-color: var(--light-blue);
@@ -311,32 +335,44 @@ img {
 }
 
 .advantages-item-accent img {
-  align-self: center;
+  -ms-grid-row-align: center;
+      align-self: center;
   width: 800px;
   height: 256px;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .advantages-item-accent:nth-child(odd)  .advantages-card {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
   grid-column: 1 / 2;
 }
 
 .advantages-item-accent:nth-child(even) .advantages-card {
   order: 1;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
   grid-column: 3 / 4;
 }
 
 .advantages-item-accent:nth-child(odd) img {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
   grid-column: 2 / 4;
 }
 
 .advantages-item-accent:nth-child(even) img {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-column: 1 / 3;
 }
 
 .city-features-list {
   grid-column: 1 / -1;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   color: var(--basic-text-color);
   background-color: var(--basic-white);
@@ -471,13 +507,19 @@ img {
   padding: 55px;
   background-color: var(--basic-white);
   box-shadow: 0px 7px 15px var(--form-shadow);
-  transform: translateY(0);
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  transition: -webkit-transform 0.4s ease-in;
   transition: transform 0.4s ease-in;
+  transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
 }
 
 .search-form-closed {
+  transition: -webkit-transform 0.4s ease-in;
   transition: transform 0.4s ease-in;
-  transform: translateY(-100%);
+  transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 
 .hotel-search-paragraph {
@@ -530,6 +572,26 @@ img {
   text-align: center;
 }
 
+.hotel-search-input::-webkit-input-placeholder {
+  color: var(--basic-black);
+  text-transform: uppercase;
+}
+
+.hotel-search-input::-moz-placeholder {
+  color: var(--basic-black);
+  text-transform: uppercase;
+}
+
+.hotel-search-input:-ms-input-placeholder {
+  color: var(--basic-black);
+  text-transform: uppercase;
+}
+
+.hotel-search-input::-ms-input-placeholder {
+  color: var(--basic-black);
+  text-transform: uppercase;
+}
+
 .hotel-search-input::placeholder {
   color: var(--basic-black);
   text-transform: uppercase;
@@ -578,15 +640,23 @@ img {
   padding: 16px;
 }
 
+@-webkit-keyframes shake {
+  0%, 100% { -webkit-transform: translateX(0); transform: translateX(0); }
+  10%, 30%, 50%, 70%, 90% { -webkit-transform: translateX(-10px); transform: translateX(-10px); }
+  20%, 40%, 60%, 80% { -webkit-transform: translateX(10px); transform: translateX(10px); }
+}
+
 @keyframes shake {
-  0%, 100% { transform: translateX(0); }
-  10%, 30%, 50%, 70%, 90% { transform: translateX(-10px); }
-  20%, 40%, 60%, 80% { transform: translateX(10px); }
+  0%, 100% { -webkit-transform: translateX(0); transform: translateX(0); }
+  10%, 30%, 50%, 70%, 90% { -webkit-transform: translateX(-10px); transform: translateX(-10px); }
+  20%, 40%, 60%, 80% { -webkit-transform: translateX(10px); transform: translateX(10px); }
 }
 
 .form-error { 
-  animation-name: shake;
-  animation-duration: 0.6s; 
+  -webkit-animation-name: shake; 
+          animation-name: shake;
+  -webkit-animation-duration: 0.6s;
+          animation-duration: 0.6s; 
 }
 
 /* Hotel Filters */
@@ -712,7 +782,8 @@ img {
   width: 2px;
   height: 22px;
   background-color: var(--basic-white);
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .filters-price-input {
@@ -723,6 +794,30 @@ img {
   color: inherit;
   background-color: transparent;
   border: none;
+} 
+
+.filters-price-input::-webkit-input-placeholder {
+  font: inherit;
+  color: inherit;
+  text-transform: uppercase;
+} 
+
+.filters-price-input::-moz-placeholder {
+  font: inherit;
+  color: inherit;
+  text-transform: uppercase;
+} 
+
+.filters-price-input:-ms-input-placeholder {
+  font: inherit;
+  color: inherit;
+  text-transform: uppercase;
+} 
+
+.filters-price-input::-ms-input-placeholder {
+  font: inherit;
+  color: inherit;
+  text-transform: uppercase;
 } 
 
 .filters-price-input::placeholder {
@@ -762,14 +857,18 @@ img {
   border: 8px solid var(--basic-white);
   border-radius: 50%;
   box-shadow: 0 2px 0 0 var(--toggle-shadow-inner);
-  filter: drop-shadow(0 4px 4px var(--toggle-shadow-outer));
+  -webkit-filter: drop-shadow(0 4px 4px var(--toggle-shadow-outer));
+          filter: drop-shadow(0 4px 4px var(--toggle-shadow-outer));
+  transition: -webkit-transform ease-in 0.2s;
   transition: transform ease-in 0.2s;
+  transition: transform ease-in 0.2s, -webkit-transform ease-in 0.2s;
   cursor: pointer;
 }
 
 .filters-price-toggle:hover,
 .filters-price-toggle:focus {
-  transform: scale(1.2); 
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2); 
   outline: none;
 }
 
@@ -795,9 +894,15 @@ img {
 /* Hotels sorting */
 
 .sorting-section {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 135px 30px 1fr 30px -webkit-min-content;
+  -ms-grid-columns: 135px 30px 1fr 30px min-content;
+  grid-template-columns: 135px 1fr -webkit-min-content;
   grid-template-columns: 135px 1fr min-content;
-  column-gap: 30px;
+  -webkit-column-gap: 30px;
+     -moz-column-gap: 30px;
+          column-gap: 30px;
   align-items: flex-start;
   padding: 30px 72px;
   text-align: left;
@@ -896,28 +1001,39 @@ img {
 }
 
 .result-item {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 135px 30px  1fr 30px auto;
   grid-template-columns: 135px  1fr auto;
-  grid-template-areas: 
+  -ms-grid-rows: auto 6px auto 6px auto;
+      grid-template-areas: 
     "img title stars"
     "img desc ."
     "img btn rating";
-  column-gap: 30px;
+  -webkit-column-gap: 30px;
+     -moz-column-gap: 30px;
+          column-gap: 30px;
   row-gap: 6px;
   padding: 25px 72px 30px;
   border-bottom: 1px solid var(--input-focus);
 }
 
 .result-item img {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 5;
+  -ms-grid-column: 1;
   grid-area: img;
   align-self: flex-end;
-  justify-self: center;
+  -ms-grid-column-align: center;
+      justify-self: center;
   display: block;
   width: 135px;
   height: 90px;
 }
 
 .result-title {
+  -ms-grid-row: 1;
+  -ms-grid-column: 3;
   grid-area: title;
   margin: 0;
   font-size: 21px;
@@ -934,6 +1050,8 @@ img {
 }
 
 .result-stars {
+  -ms-grid-row: 1;
+  -ms-grid-column: 5;
   grid-area: stars;
   justify-self: flex-end;
   height: 17px;
@@ -957,6 +1075,8 @@ img {
 }
 
 .result-text {
+  -ms-grid-row: 3;
+  -ms-grid-column: 3;
   grid-area: desc;
   margin-top: 0;
   margin-bottom: 9px;
@@ -971,6 +1091,8 @@ img {
 }
 
 .result-buttons-wrap {
+  -ms-grid-row: 5;
+  -ms-grid-column: 3;
   grid-area: btn;
 }
 
@@ -989,6 +1111,8 @@ img {
 }
 
 .result-rating {
+  -ms-grid-row: 5;
+  -ms-grid-column: 5;
   grid-area: rating;
   justify-self: flex-end;
   display: flex;
@@ -1005,7 +1129,9 @@ img {
 /* Footer */
 
 .main-footer {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 380px 1fr;
   grid-template-columns: 1fr 380px 1fr;
   padding: 18px 60px 20px;
   padding-bottom: 20px;
