--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,3 @@
-/*
-* Prefixed by https://autoprefixer.github.io
-* PostCSS: v7.0.29,
-* Autoprefixer: v9.7.6
-* Browsers: last 1 version
-*/
-
 @font-face {
   font-family: "PT Sans";
   src: local("PT Sans Bold"),
@@ -65,9 +58,9 @@
 }
 
 /* Global */
-
 *, *::before, *::after {
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .page {
@@ -75,12 +68,6 @@
 }
 
 .page-body {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: -webkit-min-content 1fr -webkit-min-content;
-  -ms-grid-rows: min-content 1fr min-content;
-  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
-  grid-template-rows: min-content 1fr min-content;
   min-width: 1200px;
   height: 100%;
   margin: 0;
@@ -126,12 +113,23 @@ img {
   padding: 0;
   list-style: none;
 }
-/* Main header */
 
+/* Main header */
 .page-wrap {
-  position: relative;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: -webkit-min-content 1fr -webkit-min-content;
+  -ms-grid-rows: min-content 1fr min-content;
+  grid-template-rows: -webkit-min-content 1fr -webkit-min-content;
+  grid-template-rows: min-content 1fr min-content;
+  min-height: 100%;
   background-color: var(--basic-white);
-  box-shadow: 0px 5px 15px var(--page-shadow);
+  -webkit-box-shadow: 0px 5px 15px var(--page-shadow);
+          box-shadow: 0px 5px 15px var(--page-shadow);
+}
+
+.main-header {
+  position: relative;
 }
 
 .main-header-logo {
@@ -139,7 +137,20 @@ img {
   top: 0;
   left: 50%;
   -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+      transform: translateX(-50%);
+}
+
+.main-header-logo-link:hover,
+.main-header-logo-link:focus {
+  -webkit-filter: drop-shadow(0 0 5px var(--basic-black));
+          filter: drop-shadow(0 0 5px var(--basic-black));
+  outline: none;
+}
+
+.main-header-logo-link:active {
+  -webkit-filter: drop-shadow(0 0 8px var(--dark-blue));
+          filter: drop-shadow(0 0 8px var(--dark-blue));
 }
 
 /* Navigation Grids */
@@ -150,7 +161,9 @@ img {
   -ms-grid-columns: (1fr)[4];
   grid-template-columns: repeat(4, 1fr);
   min-height: 56px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .navigation-item {
@@ -183,47 +196,14 @@ img {
   max-width: 230px;
 }
 
-/* Меню на флексах */
-/*
-.navigation-list {
-  display: flex;
-  flex-wrap: wrap;
-  min-height: 56px;
-  align-items: center;
-  padding-right: 70px;
-  padding-left: 70px;
-}
-
-.navigation-item {
-  width: 210px;
-  padding-top: 15px;
-  padding-bottom: 15px;
-}
-
-.navigation-item:nth-child(4n+1),
-.navigation-item:nth-child(4n+2) {
-  text-align: left;
-}
-
-.navigation-item:nth-child(4n+3),
-.navigation-item:nth-child(4n) {
-  text-align: right;
-} 
-
-.navigation-item:nth-child(4n+2) {
-  margin-right: auto;
-}
-
- /*------------ */
-
 .navigation-link {
   line-height: 26px;
   text-align: center;
   color: inherit;
 }
 
-.navigation-link:hover,
-.navigation-link:focus {
+.navigation-link[href]:hover,
+.navigation-link[href]:focus {
   color: var(--light-blue);
 }
 
@@ -336,6 +316,7 @@ img {
 
 .advantages-item-accent img {
   -ms-grid-row-align: center;
+      -ms-flex-item-align: center;
       align-self: center;
   width: 800px;
   height: 256px;
@@ -350,7 +331,9 @@ img {
 }
 
 .advantages-item-accent:nth-child(even) .advantages-card {
-  order: 1;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
   -ms-grid-column: 3;
   -ms-grid-column-span: 1;
   grid-column: 3 / 4;
@@ -490,8 +473,21 @@ img {
   overflow: hidden;
 }
 
+.map-image {
+  display: block;
+}
+
+.map-image-hidden {
+  display: none;
+}
+
 .sedona-google-map {
+  display: block;
   border: none;
+}
+
+.sedona-google-map-hidden {
+  display: none;
 }
 
 /* Hotel search form */
@@ -500,33 +496,50 @@ img {
   position: absolute;
   top: 0;
   left: 316px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 568px;
   padding: 55px;
   background-color: var(--basic-white);
-  box-shadow: 0px 7px 15px var(--form-shadow);
+  -webkit-box-shadow: 0px 7px 15px var(--form-shadow);
+          box-shadow: 0px 7px 15px var(--form-shadow);
   -webkit-transform: translateY(0);
-          transform: translateY(0);
+          -ms-transform: translateY(0);
+      transform: translateY(0);
   transition: -webkit-transform 0.4s ease-in;
+  -webkit-transition: -webkit-transform 0.4s ease-in;
+  -o-transition: transform 0.4s ease-in;
   transition: transform 0.4s ease-in;
   transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
 }
 
 .search-form-closed {
   transition: -webkit-transform 0.4s ease-in;
+  -webkit-transition: -webkit-transform 0.4s ease-in;
+  -o-transition: transform 0.4s ease-in;
   transition: transform 0.4s ease-in;
   transition: transform 0.4s ease-in, -webkit-transform 0.4s ease-in;
   -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
+          -ms-transform: translateY(-100%);
+      transform: translateY(-100%);
 }
 
 .hotel-search-paragraph {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   width: 100%;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-top: 0;
   margin-bottom: 29px;
 }
@@ -542,9 +555,14 @@ img {
 }
 
 .hotel-search-label {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-right: auto;
   max-width: 100px;
 }
@@ -609,9 +627,15 @@ img {
 }
 
 .hotel-search-controls-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 0;
   width: 38px;
@@ -669,8 +693,11 @@ img {
 }
 
 .filters-form-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding: 26px 72px 32px;
 }
 
@@ -683,8 +710,13 @@ img {
 }
 
 .filters-col-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-left: auto;
   width: 318px;
 }
@@ -746,6 +778,12 @@ img {
   background-image: url("../img/icons/checkbox-on.svg");
 }
 
+.filters-label input:focus + .filters-checkbox::before,
+.filters-label input:focus + .filters-checkbox::after {
+  outline: 1px solid blue;
+  outline-offset: 1px;
+} 
+
 .filters-label input:checked + .filters-checkbox::before {
   display: none;
 } 
@@ -768,8 +806,12 @@ img {
 
 .filters-price-wrap {
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   border: 2px solid var(--basic-white);
   border-radius: 2px;
 }
@@ -783,7 +825,8 @@ img {
   height: 22px;
   background-color: var(--basic-white);
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
 }
 
 .filters-price-input {
@@ -856,10 +899,13 @@ img {
   background-color: var(--toggle-bg);
   border: 8px solid var(--basic-white);
   border-radius: 50%;
-  box-shadow: 0 2px 0 0 var(--toggle-shadow-inner);
+  -webkit-box-shadow: 0 2px 0 0 var(--toggle-shadow-inner);
+          box-shadow: 0 2px 0 0 var(--toggle-shadow-inner);
   -webkit-filter: drop-shadow(0 4px 4px var(--toggle-shadow-outer));
           filter: drop-shadow(0 4px 4px var(--toggle-shadow-outer));
   transition: -webkit-transform ease-in 0.2s;
+  -webkit-transition: -webkit-transform ease-in 0.2s;
+  -o-transition: transform ease-in 0.2s;
   transition: transform ease-in 0.2s;
   transition: transform ease-in 0.2s, -webkit-transform ease-in 0.2s;
   cursor: pointer;
@@ -868,12 +914,14 @@ img {
 .filters-price-toggle:hover,
 .filters-price-toggle:focus {
   -webkit-transform: scale(1.2);
-          transform: scale(1.2); 
+          -ms-transform: scale(1.2);
+      transform: scale(1.2); 
   outline: none;
 }
 
 .filters-submit-button {
-  align-self: flex-start;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
   margin-left: 85px; 
   padding: 8px 33px;
   color: var(--basic-white);
@@ -903,16 +951,22 @@ img {
   -webkit-column-gap: 30px;
      -moz-column-gap: 30px;
           column-gap: 30px;
-  align-items: flex-start;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   padding: 30px 72px;
   text-align: left;
   border-bottom: 1px solid var(--input-focus);
 }
 
 .sorting-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-self: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 
 .sorting-text {
@@ -925,9 +979,14 @@ img {
 }
 
 .sorting-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 0;
   font-size: 12px;
@@ -964,8 +1023,12 @@ img {
 }
 
 .sorting-direction-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   min-width: 36px;
   padding-top: 5px;
 }
@@ -1005,8 +1068,8 @@ img {
   display: grid;
   -ms-grid-columns: 135px 30px  1fr 30px auto;
   grid-template-columns: 135px  1fr auto;
-  -ms-grid-rows: auto 6px auto 6px auto;
-      grid-template-areas: 
+      -ms-grid-rows: auto 6px auto 6px auto;
+          grid-template-areas: 
     "img title stars"
     "img desc ."
     "img btn rating";
@@ -1040,12 +1103,12 @@ img {
   line-height: 26px;
 }
 
-.result-title:hover,
-.result-title:focus {
+.result-title-link:hover,
+.result-title-link:focus {
   color: var(--light-blue);
 }
 
-.result-title:active {
+.result-title-link:active {
   color: var(--text-active-grey);
 }
 
@@ -1056,8 +1119,13 @@ img {
   justify-self: flex-end;
   height: 17px;
   width: 120px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row-reverse;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
   align-self: center;
   background: url("../img/icons/star.svg") right center/contain repeat-x;
 }
@@ -1115,9 +1183,15 @@ img {
   -ms-grid-column: 5;
   grid-area: rating;
   justify-self: flex-end;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin: 0;
   padding: 2px 14px;
   font-weight: 400;
@@ -1135,7 +1209,9 @@ img {
   grid-template-columns: 1fr 380px 1fr;
   padding: 18px 60px 20px;
   padding-bottom: 20px;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   min-height: 120px;
 }
 
@@ -1163,9 +1239,14 @@ img {
 }
 
 .socials-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .socials-item:not(:last-child) {
@@ -1173,9 +1254,15 @@ img {
 }
 
 .socials-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 46px;
   height: 48px;
   background-color: var(--light-blue);
@@ -1203,9 +1290,15 @@ img {
 }
 
 .copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding-top: 5px;
 }
 
@@ -1218,10 +1311,10 @@ img {
 }
 
 .partner-logo-link:hover svg,
-.partner-logo-link:focus svg{
+.partner-logo-link:focus svg {
   fill: var(--light-blue);
 }
 
-.partner-logo-link:active svg{
+.partner-logo-link:active svg {
   fill: var(--partner-logo-active);
 }
