--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "PT Sans", Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
   font-size: 14px;
   line-height: 21px;
   font-weight: 700;
@@ -224,14 +224,11 @@ img {
   background-color: var(--hero-bg);
   background-image: 
     url("../img/shape.svg"),
+    url("../img/welcome.svg"),
     url("../img/background-index.jpg");
-  background-position: 0 100.2%, center; 
-  background-size: contain, contain;
-  background-repeat: no-repeat, no-repeat;
-}
-
-.welcome-phrase {
-  padding-top: 76px;
+  background-position: 0 100.2%, center 76px, center; 
+  background-size: contain, auto 352px, cover;
+  background-repeat: no-repeat, no-repeat, no-repeat;
 }
 
 .advantages-section {
@@ -290,7 +287,12 @@ img {
   margin: 0 auto;
   margin-bottom: 25px;
   font-size: 21px;
+  font-weight: 700;
   color: var(--basic-black);
+}
+
+.advantages-title-min {
+  max-width: 140px;
 }
 
 .advantages-text {
@@ -365,7 +367,7 @@ img {
   min-height: 330px;
   padding: 160px 48px 50px;
   background-repeat: no-repeat;
-  background-position: 50% 24%;
+  background-position: 162px 60px;
 }
 
 .features-item-house {
@@ -378,16 +380,16 @@ img {
 
 .features-item-present {
   background-image: url("../img/icons/present.svg");
-  background-position: 50% 22%;
+  background-position: 168px 55px;
 }
 
 .features-title {
-  
   font-size: 21px;
+  font-weight: 700;
   color: var(--basic-black);
 }
 
-/* Buttons*/ 
+/* Buttons */ 
 
 .button {
   padding: 5px 15px;
@@ -450,6 +452,7 @@ img {
   margin-bottom: 30px;
   padding-right: 10px;
   font-size: 30px;
+  font-weight: 700;
   line-height: 24px;
 }
 
@@ -825,8 +828,8 @@ img {
   height: 22px;
   background-color: var(--basic-white);
   -webkit-transform: translate(-50%, -50%);
-          -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
 }
 
 .filters-price-input {
@@ -914,8 +917,8 @@ img {
 .filters-price-toggle:hover,
 .filters-price-toggle:focus {
   -webkit-transform: scale(1.2);
-          -ms-transform: scale(1.2);
-      transform: scale(1.2); 
+      -ms-transform: scale(1.2);
+          transform: scale(1.2); 
   outline: none;
 }
 
@@ -1124,7 +1127,7 @@ img {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: reverse;
-      -ms-flex-direction: row-reverse;
+     -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
   align-self: center;
   background: url("../img/icons/star.svg") right center/contain repeat-x;
@@ -1295,7 +1298,7 @@ img {
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
-          justify-content: center;
+    justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
